# AniSync

./: .env.example  .gitignore  AniSync.csproj  AniSync.sln  CLAUDE.md  Dockerfile  Enumerations.cs  Program.cs  README.md  Utils.cs  appsettings.Development.json  appsettings.json  docker-compose.yml  fly.toml
Controllers/: AnimeController.cs  ApiController.cs  AuthController.cs  BrowseController.cs  CalendarController.cs  CatalogController.cs  DiscoverController.cs  HomeController.cs  LibraryController.cs  ManifestController.cs  MetaController.Web.cs  MetaController.cs  NotificationsController.cs  NotificationsViewController.cs  PushController.cs  ScrobbleController.cs  StreamController.cs  SubtitlesController.cs  TraktApiController.cs  TraktController.cs  UserApiController.cs  VideoController.cs
Filters/: RequireConfigAttribute.cs
Models/: AnilistUserStats.cs  AnimeEntry.cs  AnimeIdMapping.cs  AnimeSourceLinks.cs  CalendarViewModel.cs  Configuration.cs  ConfigureViewModel.cs  DashboardViewModel.cs  EntrySeason.cs  LibraryPaneViewModel.cs  ManageEntryViewModel.cs  Manifest.cs  Meta.cs  MkvExtractResult.cs  NotificationsPageViewModel.cs  PosterGridViewModel.cs  PushSubscriptionRecord.cs  StreamAddon.cs  StudioSummary.cs  TagSummary.cs  TokenData.cs  TraktActionRequest.cs  TraktListItem.cs  TraktToken.cs  TraktVideoEntry.cs  TraktVideoSummary.cs  UpcomingEpisode.cs  WebSettings.cs
Properties/: launchSettings.json
Services/: AddonStreamService.cs  AniSkipService.cs  AnilistFallback.Discovery.cs  AnilistFallback.MetaEnricher.cs  AnilistFallback.Taxonomy.cs  AnilistFallback.cs  AnilistHealthMonitor.cs  AnilistService.cs  AnimeMappingService.cs  AnimeMetaLoader.cs  AnimeScheduleService.cs  BadHashCache.cs  CinemetaService.cs  EpisodeNotificationDispatcher.cs  EpisodeNotificationScheduler.cs  FillerListService.cs  HiddenEntryStore.cs  JimakuSubtitlesService.cs  KitsuService.cs  MalService.cs  MediaFusionService.cs  MediaTypePreference.cs  MergedListService.cs  MkvExtractorService.cs  NotificationStore.cs  OpenSubtitlesService.cs  PushNotificationService.cs  PushSubscriptionStore.cs  ScheduleStore.cs  SeriesEpisodeNotificationDispatcher.cs  SeriesEpisodeNotificationScheduler.cs  SqliteConfigStore.cs  SqliteConnectionFactory.cs  StreamAddonCatalog.cs  SwaggerTagDescriptions.cs  SyncJobService.cs  SyncService.cs  TmdbService.cs  TokenService.cs  TorrentioService.cs  (+7 more)
Views/: _ViewImports.cshtml
cf-cors-proxy/: README.md  package.json  wrangler.toml
cf-episode-notifier/: README.md  package.json  wrangler.toml
cf-mkv-extractor/: README.md  package.json  wrangler.toml
cf-mkv-extractor-rs/: Cargo.toml  README.md  wrangler.toml
cf-mkv-extractor-rs/.cargo/: config.toml
cf-mkv-extractor-rs/src/: ebml.rs  lib.rs  mkv.rs  reader.rs
docs/: external-player-setup.md
maui/: .gitignore  AniSync.MauiBlazor.sln  NuGet.config  README.md
twa/: README.md  assetlinks.template.json  twa-manifest.json
wwwroot/: manifest.webmanifest  (+1 more)
(+369 files in other folders)
