[package]
name = "anisync-mkv-extractor-rs"
version = "0.1.0"
edition = "2021"
description = "Indexed Matroska subtitle extractor — Rust/WASM port of cf-mkv-extractor"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
url = "2"
console_error_panic_hook = "0.1"

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1
