[package]
name = "anisync-mkv-extractor-rs"
version = "0.1.0"
edition = "2021"
description = "Indexed Matroska subtitle extractor — Rust/WASM port of cf-mkv-extractor"

[lib]
crate-type = ["cdylib"]

[dependencies]
# worker 0.8.3 is the current line on crates.io (May 2026). Latest
# worker-build (0.2+) requires worker >= 0.8.3, so they're matched.
worker = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
url = "2"
console_error_panic_hook = "0.1"

[profile.release]
# opt-level "3" not "s". "s" optimizes for binary size, which
# for hot per-byte loops (read_element / read_vint hitting tens
# of thousands of times in the cluster walk) is 3-10× slower
# than fully speed-optimised output. Binary size goes up a bit
# but stays well under CF's 1 MB free-tier limit.
opt-level = 3
lto = true
strip = true
codegen-units = 1
